# substrateLearning

./: README.md
claim-operation/pallets/poe/: Cargo.toml
claim-operation/pallets/poe/src/: lib.rs
claim-operation/runtime/: Cargo.toml
claim-operation/runtime/src/: lib.rs
command-line-tool/: main
command-line-tool/commander/: Cargo.toml
command-line-tool/commander/src/: main.rs
sigle_echo/: Cargo.toml
sigle_echo/src/: main.rs
substrate-erc20-multi/: README.md
substrate-erc20-multi/node/: Cargo.toml
substrate-erc20-multi/pallets/erc20/: Cargo.toml
substrate-erc20-multi/pallets/template/: Cargo.toml
substrate-erc20-multi/runtime/: Cargo.toml
